--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,24 @@ body {
     text-wrap: balance;
   }
 }
+
+.custom-button{
+   @apply bg-gray-300 bg-opacity-50 border border-black text-black font-bold py-2 px-4 rounded m-2;
+  display: flex;
+}
+
+.object-right-top{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.header{
+  @apply w-full border-b border-black p-4;
+}
+
+header {
+  position: relative;
+  border-bottom: 2px solid black; 
+  padding-bottom: 10px; 
+}
