--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,17 @@ header {
   border-bottom: 2px solid black; 
   padding-bottom: 10px; 
 }
+
+h2{
+  border: 2px solid black; 
+  padding: 20px; 
+  margin: 100px; 
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; 
+  flex: 1 0 20%; 
+  text-align: center; 
+  margin: 40px; 
+
+}
+
