--- a/src/app/contact/contact.css
+++ b/src/app/contact/contact.css
@@ -1,3 +1,34 @@
-h2{
-    
-}
+.icon-container {
+    display: flex;
+    justify-content: center;  
+    align-items: center;
+    gap: 40px; 
+  }
+  
+  .icon-item {
+    text-align: center;  
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+  
+  .icon-circle {
+    width: 80px;   
+    height: 80px;
+    border-radius: 50%;  
+    background-color: #f0f0f0;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  
+  .icon-image {
+    width: 50px;  
+    height: 50px;
+  }
+  
+  .icon-label {
+    font-size: 14px;
+    margin-top: 5px;
+  }
